syntax = "proto3";

package identity.v1;

option go_package = "github.com/m1thrandir225/meridian/internal/identity/infrastructure/api;identitypb";

service IdentityService {
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    string user_id = 1;
}
